--- a/src/AndroidRedirect.Builder/MainPage.xaml
+++ b/src/AndroidRedirect.Builder/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:controls="clr-namespace:AndroidRedirect.Builder.Controls"
+             xmlns:controls="clr-namespace:AndroidRedirect.Builder.Resources.Controls"
              x:Class="AndroidRedirect.Builder.MainPage">
 
     <Grid Padding="20" RowDefinitions="Auto, *" RowSpacing="15">
