--- a/src/AndroidRedirect.Builder/Resources/Controls/ColorSwatchesPicker.xaml
+++ b/src/AndroidRedirect.Builder/Resources/Controls/ColorSwatchesPicker.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AndroidRedirect.Builder.Controls.ColorSwatchesPicker">
+             x:Class="AndroidRedirect.Builder.Resources.Controls.ColorSwatchesPicker">
     <ContentView.Content>
         <VerticalStackLayout Spacing="10">
             <Label Text="Color Selection" 
